--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -17,9 +18,6 @@
         android:id="@+id/timeShowButton"
         android:layout_width="wrap_content"
         android:layout_height="56sp"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginTop="150dp"
         android:onClick="openPicker"
         android:text="Open Time Picker"
         app:cornerRadius="5sp" />
@@ -28,9 +26,17 @@
         android:id="@+id/dateDialogOpener"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginVertical="10sp"
         android:onClick="openDateDialog"
-        android:layout_marginTop="230dp"
         android:text="Open Date Picker"
         app:cornerRadius="5sp" />
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/alertDialogHandler"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="openAlertDialog"
+        android:text="Show Alert Dialog"
+        app:cornerRadius="5sp" />
+
+</LinearLayout>
